<resources>
    <string name="app_name">Bug Finder</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Create Post</string>
    <string name="title_dashboard">Feed</string>
    <string name="title_notifications">Notifications</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="description_of_bug">Description of bug</string>
    <string name="post_bug_report">Post Bug Report</string>
    <string name="upload_file">Upload File</string>
</resources>