<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/submitBugBtn"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadFileBtn" />

    <EditText
        android:id="@+id/bugTitleET"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/lobster"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameSpinner" />

    <EditText
        android:id="@+id/bugDescET"
        android:layout_width="295dp"
        android:layout_height="97dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/lobster"
        android:gravity="start|top"
        android:hint="@string/description_of_bug"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bugTitleET" />

    <TextView
        android:id="@+id/postBugTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lobster"
        android:text="@string/post_bug_report"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/gameSpinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postBugTV" />

    <Button
        android:id="@+id/uploadFileBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/upload_file"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bugDescET" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="Clear"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitBugBtn"
        app:layout_constraintVertical_bias="0.065" />

</androidx.constraintlayout.widget.ConstraintLayout>